2010-04-04	smeghead  <smeghead@users.sourceforge.jp>

	* 1.3.11リリース

2010-04-04  smeghead <smeghead@users.sourceforge.jp>

	* デザインを修正した。

2010-03-28  smeghead <smeghead@users.sourceforge.jp>

	* 「状態」を変更しないで返信を行なう場合のjavascriptのアラートメッセージが
	   わかりにくかったのを修正した。

2010-03-22  smeghead <smeghead@users.sourceforge.jp>

	* makeファイル中で、INITIAL_LOCALEを自動判定するように変更した。
	* デフォルトBTSに削除というステータスを追加した。

2010-03-21  smeghead <smeghead@users.sourceforge.jp>

	* sqlite3をstaticリンクするようなmakeのtargetを追加した。

2010-03-20  smeghead <smeghead@users.sourceforge.jp>

	* INSTALLに基本ソフトウェアをインストールする項を追加した。

2010-03-15  smeghead <smeghead@users.sourceforge.jp>

	* デザインの変更

2010-03-07  smeghead <smeghead@users.sourceforge.jp>

	* フォームの複数選択可能リストの項目のsizeは、最大6になるように修正した。
    選択肢が多い場合にフォームが伸びすぎないように修正した。

2010-03-04	smeghead  <smeghead@users.sourceforge.jp>

	* INSTALLのコンパイルの言語指定オプション(INITIAL_LOCALE)を追加した。

2010-03-01	smeghead  <smeghead@users.sourceforge.jp>

	* 1.3.10リリース

2010-03-01 smeghead  <smeghead@users.sourceforge.jp>

	* バーンダウンチャート用のJavaScriptでIEの場合のみエラーが発生するのを修正
	した。

2010-02-27	smeghead  <smeghead@users.sourceforge.jp>

	* 1.3.09リリース

2010-02-27 smeghead  <smeghead@users.sourceforge.jp>

	* 英語、中国語のリソースを修正した。 

2010-02-25	smeghead  <smeghead@users.sourceforge.jp>

	* バーンダウンチャートの日付を表示するように修正した。
	* 当日の23:59:59までを集計するように修正した。
	* バーンダウンチャートで、JavaScriptが有効でない場合に、テーブルを表示する
	ようにした。
	* バーンダウンチャート用の日本語リソースを作成した。

2010-02-23	smeghead  <smeghead@users.sourceforge.jp>

	* バーンダウンチャート用を作成中。sqlにバグがある。
	* バーンダウンチャートのSQLのバグを修正した。

2010-02-21	smeghead  <smeghead@users.sourceforge.jp>

	* 簡易wikiのコード例で説明とコードの間に改行が無かったので、
	正しく表示されていなかったのを修正した。
	* バーンダウンチャート用ライブラリを追加。

2010-02-13	smeghead  <smeghead@users.sourceforge.jp>

	* 1.3.08-win32リリース

2010-02-13	smeghead  <smeghead@users.sourceforge.jp>

	* Makefileのwin32用のwebappwin32でテンプレートディレクトリをコピーするよう
	にした。
	* Windows用のテンプレートの出力方法を修正した。

2010-01-25	smeghead  <smeghead@users.sourceforge.jp>

	* Makefileでfaviconを処理するように修正した。

2010-01-24	smeghead  <smeghead@users.sourceforge.jp>