@@ -8,7 +8,7 @@
     エラーが発生しましたm(_ _)m
     <hr />
     <div align="right">
-      <address>Copyright smeghead 2007 - 2009.</address>
+      <address>Copyright smeghead 2007 - 2010.</address>
     </div>
   </body>
 </html>
