@@ -1508,7 +1508,7 @@
 </tr>
 <tr>
 	<td>assertConfirmation</td>
-	<td>状態が変更されていませんが、間違いないですか？</td>
+	<td>「状態」が変更されていませんが、間違いないですか？</td>
 	<td></td>
 </tr>
 <tr>
@@ -2053,7 +2053,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=del</td>
+	<td>link=aa</td>
 	<td></td>
 </tr>
 <tr>
